completed page in working order. Completed farm partners and marketing block sections. Fixed alignment issue with testimonial section.

--- a/reimagine_hero.css
+++ b/reimagine_hero.css
@@ -27,7 +27,7 @@ button.reimagine_primary-btn {
 	border-radius: 30px;
 	font-family: alternate-gothic-compressed;
 	font-size: 1.5em;
-	padding: 6px 20px 4px 20px;
+	padding: 10px 24px 5px 24px;
 	display: block;
 	margin-top: 20px;
 	transition: all 0.5s ease-in-out;
